--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -23,13 +23,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        flutter_version: [stable, beta, master]
+        # Flutter channel `master` requires dart format across the board.
+        # flutter_version: [stable, beta, master]
+        flutter_version: [stable, beta]
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00
         with:
-          distribution: 'zulu' # See https://github.com/actions/setup-java#supported-distributions
+          distribution: "zulu" # See https://github.com/actions/setup-java#supported-distributions
           java-version: "17"
       - uses: subosito/flutter-action@e938fdf56512cc96ef2f93601a5a40bde3801046
         with:
