--- a/colorist/step_05/pubspec.yaml
+++ b/colorist/step_05/pubspec.yaml
@@ -1,6 +1,6 @@
 name: colorist
 description: "A new Flutter project."
-publish_to: "none"
+publish_to: 'none'
 version: 0.1.0
 
 environment:
@@ -9,11 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  colorist_ui: ^0.2.2
+  colorist_ui: ^0.2.3
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   firebase_core: ^3.13.0
-  firebase_vertexai: ^1.5.0
+  firebase_vertexai: ^1.6.0
 
 dev_dependencies:
   flutter_test:
